<resources>
    <string name="app_name">AfricaTour</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="media">Media</string>
    <string name="theTour">The tour</string>
    <string name="myTour">My tour</string>
    <string name="contact">Contact</string>
    <string name="phone">Phone</string>
    <string name="mail">Mail</string>
    <string name="loisirs">Free time</string>

    <string name="mailSubject">Contact AfricaTour</string>
</resources>
